kubernetes/navidrome/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: navidrome
  name: navidrome-policy
specs:
  # allow connection from cilium ingress
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: navidrome
    ingress:
      - fromEntities:
          - ingress
        toPorts:
          - ports:
              - protocol: TCP
                port: "4533"
